@@ -432,6 +432,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\Utils\CmdUrlParser.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\Utils\CmdUrlParser.h"
+					>
+				</File>
+				<File
 					RelativePath=".\Colors.cpp"
 					>
 				</File>
