@@ -18,6 +18,7 @@
 - NEW: In the log dialog, an error message can be cleared with
        a doubleclick to view the received log messages 
        up to the error. (Stefan)
+- NEW: url handler for TSVN commands. See issue #440 for details. (Stefan)
 
 Version 1.6.3
 - NEW: All binaries are now digitally signed. (Stefan)
